--- a/public/css/style.css
+++ b/public/css/style.css
@@ -549,6 +549,8 @@ ul {
   padding: 30px;
   border-radius: 10px;
   box-shadow: var(--shadow-black-100);
+  text-align: center;
+  transition: all 0.5s ease;
 }
 .team-item h3 {
   font-size: 18px;
@@ -563,6 +565,11 @@ ul {
   font-weight: 300;
   color: var(--black-400);
   text-transform: capitalize;
+}
+
+.team-item:hover {
+  box-shadow: var(--shadow-black-300);
+  transition: all 0.5s ease;
 }
 
 /* timeline section */
